<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="394dp"
        android:layout_height="295dp"
        android:layout_marginTop="152dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <Button
            android:id="@+id/layout1_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout1" />

        <Button
            android:id="@+id/layout2_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout2" />

        <Button
            android:id="@+id/layout3_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout3" />

        <Button
            android:id="@+id/layout4_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout4" />

        <Button
            android:id="@+id/layout5_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout5" />

        <Button
            android:id="@+id/layout6_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/layout6" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="40dp"
        android:text="@string/tittle"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>